--- a/index.html
+++ b/index.html
@@ -9,25 +9,32 @@
 <body>
     <div class="container">
         <h2>Currency Converter</h2>
-        <div class="converter">
-            <input type="number" id="amount" placeholder="Enter amount">
-            <select id="fromCurrency">
-                <option value="USD">USD (US Dollar)</option>
-                <option value="INR">INR (Indian Rupee)</option>
-                <option value="EUR">EUR (Euro)</option>
-                <option value="GBP">GBP (British Pound)</option>
-                <option value="JPY">JPY (Japanese Yen)</option>
-            </select>
-            <span>to</span>
-            <select id="toCurrency">
-                <option value="USD">USD (US Dollar)</option>
-                <option value="INR">INR (Indian Rupee)</option>
-                <option value="EUR">EUR (Euro)</option>
-                <option value="GBP">GBP (British Pound)</option>
-                <option value="JPY">JPY (Japanese Yen)</option>
-            </select>
-            <button onclick="convert()">Convert</button>
-            <p id="result"></p>
+        <div class="converter-box">
+            <div class="input-row">
+                <input type="number" id="amount" placeholder="Amount" class="input-field">
+                <select id="fromCurrency" class="currency-select">
+                    <option value="USD">USD</option>
+                    <option value="INR">INR</option>
+                    <option value="EUR">EUR</option>
+                    <option value="GBP">GBP</option>
+                    <option value="JPY">JPY</option>
+                </select>
+            </div>
+            <div class="controls">
+                <button onclick="swapCurrencies()" class="swap-btn">↔</button>
+                <div class="arrow">↓</div>
+            </div>
+            <div class="input-row">
+                <select id="toCurrency" class="currency-select">
+                    <option value="USD">USD</option>
+                    <option value="INR">INR</option>
+                    <option value="EUR">EUR</option>
+                    <option value="GBP">GBP</option>
+                    <option value="JPY">JPY</option>
+                </select>
+            </div>
+            <button onclick="convert()" class="convert-btn">Convert</button>
+            <div id="result" class="result-box"></div>
         </div>
     </div>
     <script src="script.js"></script>
